--- a/static/index.html
+++ b/static/index.html
@@ -121,8 +121,15 @@
                             // try to figure out how to run the example on the local machine first
                             // have a high overview of how the code works and than change 
 
+
+                            // station is the on element of the bikes array with features
                             for (station of bikes.features) {
                                 //for each one station. des is destination here
+
+                                   //ex. station.currently.time
+                                    // station.forecast.time
+
+
                                 const des = {
                                     lat: station.geometry.coordinates[0],//lat
                                     lng: station.geometry.coordinates[1] //lng
