Add comments back in map

--- a/examples/comments_pair_programming.html
+++ b/examples/comments_pair_programming.html
@@ -1,3 +1,5 @@
+<!-- CMD ? is automatically adding command openings and closings in any language -->
+
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -30,8 +32,8 @@
         </style>
     </head>
     <body>
-        <!--ui grid is from the cloud fare library-->
-        <div class="ui grid">
+
+        <div class="ui grid">   <!--ui grid is from the cloud fare library-->
             <!-- <div class="six wide column"></div> -->
             <div class="column">
                 <div class="row">
@@ -58,7 +60,7 @@
             </div>
         </div>
 
-<!-- CMD ? is automatically adding command openings and closings in any language -->
+<!-- Get current position -->
 <script>
             let map = null
 
