Moved lossed notes back into _map file

--- a/examples/comments_pair_programming.html
+++ b/examples/comments_pair_programming.html
@@ -1,4 +1,8 @@
-<!-- CMD ? is automatically adding command openings and closings in any language -->
+<!-- CMD ? is automatically adding command openings and closings in any language 
+// VS trick: cursor on currentLocation and press command and you will find the connected element definition
+// TIP from Xiang: MDN webdocs: Follow tutorial on HTTP protocol
+
+-->
 
 <html lang="en">
     <head>
