Integrated index Xiang into _map (excl predictions)

--- a/examples/index_xiang.html
+++ b/examples/index_xiang.html
@@ -1,72 +1,90 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <style>
+      #mapBox {
+        position: relative;
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- this makes the script compatible between different http protocols.-->
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Document</title>
-  <!-- <link rel="stylesheet" href="style.css" /> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-  <style>
-    #map {
-      /* use min-height and min-width, with simply height and width it does not work */
-      min-height: 100%;
-      min-width: 100%;
-    }
+      #map {
+        min-height: 100%;
+        min-width: 100%;
+      }
 
-    #mapBar {
-      margin: 10px 2em;
-    }
+      #mapBar {
+        margin: 1em 1em;
+      }
 
-    #searchBar {
-      margin: 10px 2em;
-    }
-  </style>
-</head>
+      #searchBar {
+        /* position: absolute;
+        top: 1em;
+        right: 1em; */
+        margin: 1em 1em;
+        /* z-index: 2;
+        min-width: 100%; */
+      }
 
-<!-- Contains temporary notes from pair programming  -->
+      #currentWeatherWidget {
+        margin: 1em 1em;
+      }
 
-
-<body>
-  <div class="ui grid">
-    <!--ui grid is an element from the cloud fare library-->
-    <!-- <div class="six wide column"></div> -->
-    <div class="column">
-      <div class="row">
-        <div class="ui action fluid input" id="searchBar">
-          <!--ui action fluid input is from the cloud fare library-->
-          <input type="text" placeholder="Search..." id="searchBox" />
-          <!--ui button is from the cloud fare library-->
-          <button class="ui button" onclick="search()">Search</button>
-          <!--Xiang uses semantic-ui.com for the UI elements -->
+      #forecastWidget {
+        margin: 1em 1em;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="ui grid">
+      <div class="six wide column">
+        <div class="container" id="currentWeatherWidget">
+          <script
+            type="text/javascript"
+            src="https://darksky.net/widget/graph-bar/53.3498,-6.2603/ca12/en.js?width=100%&height=350&title=Full Forecast&textColor=333333&bgColor=FFFFFF&transparency=false&skyColor=undefined&fontFamily=Default&customFont=&units=ca&timeColor=333333&tempColor=333333&currentDetailsOption=true"
+          ></script>
+        </div>
+        <div class="container" id="forecastWidget">
+          <script
+            type="text/javascript"
+            src="https://darksky.net/widget/graph/53.3498,-6.2603/ca12/en.js?width=100%&height=320&title=dublin&textColor=333333&bgColor=FFFFFF&transparency=false&fontFamily=Default&customFont=&units=ca&graph=temperature_graph&timeColor=333333&tempColor=333333&lineColor=333333&markerColor=333333"
+          ></script>
         </div>
       </div>
-      <!--XZ calls it bar becasue it represents a single line-->
-      <div class="row" id="mapBar">
-        <div id="map"></div>
+      <div class="ten wide column" id="mapBox">
+        <div class="row">
+          <div class="ui action fluid input" id="searchBar">
+            <input type="text" placeholder="Search..." id="searchBox" />
+            <button class="ui button" onclick="search()">Search</button>
+          </div>
+        </div>
+        <div class="row" id="mapBar">
+          <div id="map"></div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!--**************************** Get users location *******************************-->
-  <script>
-    let map = null
+    <script>
+      let map = null
 
-    function getCurrentPositionPermission() {
-      currentLocation().then(pos => {
-        return pos
-      })
-    }
+      function getCurrentPositionPermission() {
+        currentLocation().then(pos => {
+          return pos
+        })
+      }
 
-    // ***************** Creates one new instance of the google maps class, with keword 'new' in JavaScript. **********
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: { lat: 53.35014, lng: -6.266155 },
           zoom: 13,
-// !!!!! Test loading time of styles
           styles: [
             {
               elementType: 'geometry',
@@ -285,57 +303,32 @@
         })
       }
 
+      function search() {
+        const address = document.querySelector('#searchBox').value
+        const current = currentLocation(address)
 
-    // ****************** Creates the onclick event at the search button *********************************
-    function search() {
-
-      // 2 options: get the current location or get the address as typed
-      // querySelector is similar to get element by id. It is a build in functionality of javascript. Queryselecter can be doen with anything that is a class or id in the css                
-      const address = document.querySelector('#searchBox').value
-      const current = currentLocation(address)
-
-      // ****************** From the current (the user's location) get the position coordinates ***********************
-
-      current.then(pos => {
-        // after we get the position coordinates we center the map to that place.
-        map.setCenter(pos)
-        // send the request to our server API
-        const url = `/api/v1/bikes?country=ie`
-        // options is just a variable name here for storing the http protocol. TIP from Xiang: MDN webdocs: Follow tutorial on HTTP protocol
-        const options = {
-          method: 'GET',
-          cache: 'no-cache',
-          headers: {
-            'Content-Type': 'application/json',
-            Accept: 'application/json'
+        current.then(pos => {
+          map.setCenter(pos)
+          const url = `/api/v1/bikes?country=ie`
+          const options = {
+            method: 'GET',
+            cache: 'no-cache',
+            headers: {
+              'Content-Type': 'application/json',
+              Accept: 'application/json'
+            }
           }
-        }
 
-        // ****************** Function that fetches bike data from the server **************************
-        // we add the api_url and the protocol_options. Read basic concepts on developer.mozilla.org
-        // You can use the chrome extension Restlet client for REST API testing here
+          let lastWindow = null
 
-        let lastWindow = null
-
-        fetch(url, options)
-          .then(bikes => bikes.json())
-          .then(bikes => {
-            // features is used as array in GEO JSON is an array and each element respresents a station
-            // geojson.org describes more about this
-            // you can add any property you like.
-            // start with official documentation. They provide the links with complete descriptions.
-            // try to figure out how to run the example on the local machine first
-            // have a high overview of how the code works and than change
-            // station is the on element of the bikes array with features
-            for (station of bikes.features) {
-              //for each one station. des is destination here // changed it now to destination
-              //ex. station.currently.time
-              // station.forecast.time
-              const des = {
-                lat: station.geometry.coordinates[0],
-                lng: station.geometry.coordinates[1]
-              }
-              // position is our current position or the typed address. destination is the coordinate for the station
+          fetch(url, options)
+            .then(bikes => bikes.json())
+            .then(bikes => {
+              for (station of bikes.features) {
+                const des = {
+                  lat: station.geometry.coordinates[0],
+                  lng: station.geometry.coordinates[1]
+                }
 
                 if (distanceWithin(pos, des, 10000)) {
                   const latLng = new google.maps.LatLng(des.lat, des.lng)
@@ -349,8 +342,7 @@
                     info: station.properties
                   })
 
-              
-                marker.addListener('click', event => {
+                  marker.addListener('click', event => {
                     fetch(
                       `/api/v1/pred?number=${
                         marker.info.number
@@ -428,67 +420,64 @@
         return div.outerHTML
       }
 
-
-    // We need to start the server to show the markers on the map.
-    // We need to install something for now untill we have a script to start it. NodeJs is easiest. 
-    // Not anymore needed now we changed the server settings and implemented it on our Flask app
-
-    function distanceWithin(src, des, range) {
-      const toRadians = degree => {
-        return degree * (Math.PI / 180)
-      }
-
-      const theta1 = toRadians(src.lat)// src changed to source, don't get the logic of the name and the meaning yet.
-      const theta2 = toRadians(des.lat)// should this one not ben source.lng?
-      const delta1 = toRadians(des.lat - src.lat)
-      const delta2 = toRadians(des.lng - src.lng)
-
-      const R = 6371e3 // What is this number?
-      const a =
-        Math.pow(Math.sin(delta1 / 2), 2) +
-        Math.cos(theta1) *
-        Math.cos(theta2) *
-        Math.pow(Math.sin(delta2 / 2), 2)
-
-      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a))
-
-      const distance = R * c
-
-      if (distance <= range) {
-        return true
-      }
-
-      return false
-    }
-
-    function currentLocation(address) {
-      return new Promise((resolve, reject) => {
-        if ('geolocation' in navigator && address === '') {
-          navigator.geolocation.getCurrentPosition(pos => {
-            resolve({ lat: pos.coords.latitude, lng: pos.coords.longitude })
-          })
-        } else {
-          const url = `/api/v1/coordinates?city=${address}&country=ie`
-          const options = {
-            method: 'GET',
-            cache: 'no-cache',
-            headers: {
-              'Content-Type': 'application/json',
-              Accept: 'application/json'
-            }
-          }
-
-          fetch(url, options)
-            .then(coords => coords.json())
-            .then(coords => {
-              resolve({ lat: coords[0].lat, lng: coords[0].lon })
-            })
+      function distanceWithin(src, des, range) {
+        const toRadians = degree => {
+          return degree * (Math.PI / 180)
         }
-      })
-    }
-  </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHYYR8CVCvuGOzdM-wHwk9qLIBn8WLN5I&callback=initMap"
-    async defer></script>
-</body>
 
+        const theta1 = toRadians(src.lat)
+        const theta2 = toRadians(des.lat)
+        const delta1 = toRadians(des.lat - src.lat)
+        const delta2 = toRadians(des.lng - src.lng)
+
+        const R = 6371e3
+        const a =
+          Math.pow(Math.sin(delta1 / 2), 2) +
+          Math.cos(theta1) *
+            Math.cos(theta2) *
+            Math.pow(Math.sin(delta2 / 2), 2)
+
+        const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a))
+
+        const distance = R * c
+
+        if (distance <= range) {
+          return true
+        }
+
+        return false
+      }
+
+      function currentLocation(address) {
+        return new Promise((resolve, reject) => {
+          if ('geolocation' in navigator && address === '') {
+            navigator.geolocation.getCurrentPosition(pos => {
+              resolve({ lat: pos.coords.latitude, lng: pos.coords.longitude })
+            })
+          } else {
+            const url = `/api/v1/coordinates?city=${address}&country=ie`
+            const options = {
+              method: 'GET',
+              cache: 'no-cache',
+              headers: {
+                'Content-Type': 'application/json',
+                Accept: 'application/json'
+              }
+            }
+
+            fetch(url, options)
+              .then(coords => coords.json())
+              .then(coords => {
+                resolve({ lat: coords[0].lat, lng: coords[0].lon })
+              })
+          }
+        })
+      }
+    </script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHYYR8CVCvuGOzdM-wHwk9qLIBn8WLN5I&callback=initMap"
+      async
+      defer
+    ></script>
+  </body>
 </html>
